React: Stop material icons from flickering by giving them constant width

--- a/react-portfolio/src/Navbar.css
+++ b/react-portfolio/src/Navbar.css
@@ -29,5 +29,7 @@
 
 .material-icons-outlined {
   padding-left: 1.5rem;
-  padding-right: 0.5rem
+  padding-right: 0.5rem;
+  width: 24px;
+  height: 24px;
 }
